[package]
edition = "2021"
name = "clean-arch"
version = "0.1.0"

[dependencies]
actix-web = "4.8.0"
async-trait = "0.1.81"
diesel = {version = "2.2.2", features = ["postgres", "r2d2"]}
dotenv = "0.15.0"
env_logger = "0.11.3"
log = "0.4.22"
r2d2 = "0.8.10"
serde = {version = "1.0.204", features = ["derive"]}
