[package]
name = "http-proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
hyper = { version = "1.2.0", features = ["full"] }
hyper-util = "0.1.3"
tokio = { version = "1.36.0", features = ["full"] }
tower = { version = "0.4.13", features = ["make"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
