[package]
name = "low-level-rustls"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
futures-util = { version = "0.3.30", default-features = false }
hyper = { version = "1.2.0", features = ["full"] }
hyper-util = "0.1.3"
rustls = "0.23.2"
rustls-pemfile = "2.1.1"
tokio = { version = "1.36.0", features = ["full"] }
tokio-rustls = "0.25.0"
tower = { version = "0.4.13", features = ["make"] }
tower-service = "0.3.2"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
