[package]
name = "oauth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
async-session = "3.0.0"
axum = "0.7.4"
axum-extra = { version = "0.9.2", features = ["typed-header"] }
http = "1.1.0"
oauth2 = "4.4.2"
reqwest = { version = "0.11.27", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1.0.197", features = ["derive"] }
tokio = { version = "1.36.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
